--- a/toc-everything.html
+++ b/toc-everything.html
@@ -15,7 +15,8 @@
   <h2 class="toc">All Functions</h2>
     <a target="mainFrame" href="numa-module.html#available"
      >numa.available</a><br />    <a target="mainFrame" href="numa-module.html#bind"
-     >numa.bind</a><br />    <a target="mainFrame" href="numa-module.html#get_distance"
+     >numa.bind</a><br />    <a target="mainFrame" href="numa-module.html#get_affinity"
+     >numa.get_affinity</a><br />    <a target="mainFrame" href="numa-module.html#get_distance"
      >numa.get_distance</a><br />    <a target="mainFrame" href="numa-module.html#get_interleave_mask"
      >numa.get_interleave_mask</a><br />    <a target="mainFrame" href="numa-module.html#get_max_node"
      >numa.get_max_node</a><br />    <a target="mainFrame" href="numa-module.html#get_membind"
@@ -23,7 +24,8 @@
      >numa.get_node_size</a><br />    <a target="mainFrame" href="numa-module.html#get_preferred"
      >numa.get_preferred</a><br />    <a target="mainFrame" href="numa-module.html#get_run_on_node_mask"
      >numa.get_run_on_node_mask</a><br />    <a target="mainFrame" href="numa-module.html#node_to_cpus"
-     >numa.node_to_cpus</a><br />    <a target="mainFrame" href="numa-module.html#set_interleave_mask"
+     >numa.node_to_cpus</a><br />    <a target="mainFrame" href="numa-module.html#set_affinity"
+     >numa.set_affinity</a><br />    <a target="mainFrame" href="numa-module.html#set_interleave_mask"
      >numa.set_interleave_mask</a><br />    <a target="mainFrame" href="numa-module.html#set_localalloc"
      >numa.set_localalloc</a><br />    <a target="mainFrame" href="numa-module.html#set_membind"
      >numa.set_membind</a><br />    <a target="mainFrame" href="numa-module.html#set_preferred"
