--- a/toc-numa-module.html
+++ b/toc-numa-module.html
@@ -15,7 +15,8 @@
   <h2 class="toc">Functions</h2>
     <a target="mainFrame" href="numa-module.html#available"
      >available</a><br />    <a target="mainFrame" href="numa-module.html#bind"
-     >bind</a><br />    <a target="mainFrame" href="numa-module.html#get_distance"
+     >bind</a><br />    <a target="mainFrame" href="numa-module.html#get_affinity"
+     >get_affinity</a><br />    <a target="mainFrame" href="numa-module.html#get_distance"
      >get_distance</a><br />    <a target="mainFrame" href="numa-module.html#get_interleave_mask"
      >get_interleave_mask</a><br />    <a target="mainFrame" href="numa-module.html#get_max_node"
      >get_max_node</a><br />    <a target="mainFrame" href="numa-module.html#get_membind"
@@ -23,7 +24,8 @@
      >get_node_size</a><br />    <a target="mainFrame" href="numa-module.html#get_preferred"
      >get_preferred</a><br />    <a target="mainFrame" href="numa-module.html#get_run_on_node_mask"
      >get_run_on_node_mask</a><br />    <a target="mainFrame" href="numa-module.html#node_to_cpus"
-     >node_to_cpus</a><br />    <a target="mainFrame" href="numa-module.html#set_interleave_mask"
+     >node_to_cpus</a><br />    <a target="mainFrame" href="numa-module.html#set_affinity"
+     >set_affinity</a><br />    <a target="mainFrame" href="numa-module.html#set_interleave_mask"
      >set_interleave_mask</a><br />    <a target="mainFrame" href="numa-module.html#set_localalloc"
      >set_localalloc</a><br />    <a target="mainFrame" href="numa-module.html#set_membind"
      >set_membind</a><br />    <a target="mainFrame" href="numa-module.html#set_preferred"
